--- a/index.html
+++ b/index.html
@@ -813,7 +813,15 @@
                     <div class="driving-option" data-option="Need with Driver">NEED WITH DRIVER</div>
                     <div class="driving-option" data-option="Self Drive">SELF DRIVE</div>
                 </div>
-                <div class="note self-drive-note" id="selfDriveNote" style="display:none;">All fuel costs will be paid by the customer.</div>
+                <div class="note self-drive-note" id="selfDriveNote" style="display:none;">
+                    <strong>Eligibility for Self Drive:</strong>
+                    <ul>
+                        <li>Indemnity Form: This form will be provided by us. You must sign it to accept the terms and conditions for self-driving.</li>
+                        <li>Driving Licence: A valid driving licence from the nominated driver is required. The licence must be presented at the time of booking.</li>
+                        <li>Aadhar Card: A valid Aadhar card of the nominated driver must be provided as proof of identity.</li>
+                        <li>Security Deposit: A security deposit will be required, which will be refunded after the vehicle is returned in the same condition.</li>
+                    </ul>
+                </div>
                 <input type="hidden" id="drivingOption" name="drivingOption" value="">
             </div>
 
