Add fuel cost responsibility to self-drive eligibility

--- a/index.html
+++ b/index.html
@@ -820,6 +820,7 @@
                         <li>Driving Licence: A valid driving licence from the nominated driver is required. The licence must be presented at the time of booking.</li>
                         <li>Aadhar Card: A valid Aadhar card of the nominated driver must be provided as proof of identity.</li>
                         <li>Security Deposit: A security deposit will be required, which will be refunded after the vehicle is returned in the same condition.</li>
+                        <li>All fuel costs will be paid by the customer.</li>
                     </ul>
                 </div>
                 <input type="hidden" id="drivingOption" name="drivingOption" value="">
