Style self-drive eligibility points

--- a/index.html
+++ b/index.html
@@ -815,13 +815,13 @@
                 </div>
                 <div class="note self-drive-note" id="selfDriveNote" style="display:none;">
                     <strong>Eligibility for Self Drive:</strong>
-                    <ul>
-                        <li>Indemnity Form: This form will be provided by us. You must sign it to accept the terms and conditions for self-driving.</li>
-                        <li>Driving Licence: A valid driving licence from the nominated driver is required. The licence must be presented at the time of booking.</li>
-                        <li>Aadhar Card: A valid Aadhar card of the nominated driver must be provided as proof of identity.</li>
-                        <li>Security Deposit: A security deposit will be required, which will be refunded after the vehicle is returned in the same condition.</li>
-                        <li>All fuel costs will be paid by the customer.</li>
-                    </ul>
+                    <ol>
+                        <li><strong>Indemnity Form</strong>: This form will be provided by us. You must sign it to accept the terms and conditions for self-driving.</li>
+                        <li><strong>Driving Licence</strong>: A valid driving licence from the nominated driver is required. The licence must be presented at the time of booking.</li>
+                        <li><strong>Aadhar Card</strong>: A valid Aadhar card of the nominated driver must be provided as proof of identity.</li>
+                        <li><strong>Security Deposit</strong>: A security deposit will be required, which will be refunded after the vehicle is returned in the same condition.</li>
+                        <li><strong>Fuel Costs</strong>: All fuel costs will be paid by the customer.</li>
+                    </ol>
                 </div>
                 <input type="hidden" id="drivingOption" name="drivingOption" value="">
             </div>
