Update WhatsApp phone display

--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,7 @@
                 </div>
                 <div class="summary-item">
                     <span class="summary-label">Phone:</span>
-                    <span class="summary-value" id="summaryPhone">+918826139339</span>
+                    <span class="summary-value" id="summaryPhone">+91 88261 39339</span>
                 </div>
                 <div class="summary-item">
                     <span class="summary-label">Email:</span>
