--- a/index.html
+++ b/index.html
@@ -889,8 +889,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="message">Special Requests:</label>
-                    <textarea id="message" name="message" rows="4" placeholder="Please share any special requirements or event details..." required></textarea>
+                    <label for="message">Special Requests (Optional):</label>
+                    <textarea id="message" name="message" rows="4" placeholder="Please share any special requirements or event details..."></textarea>
                 </div>
             </div>
 
